tests/snapshots/main__small_well_tested_tree_with_baseline_skip.snap
---
source: tests/main.rs
expression: stdout
---
Found 4 mutants to test
caught   src/lib.rs:5:5: replace factorial -> u32 with 0
caught   src/lib.rs:5:5: replace factorial -> u32 with 1
caught   src/lib.rs:7:11: replace *= with += in factorial
caught   src/lib.rs:7:11: replace *= with /= in factorial
4 mutants tested: 4 caught

